fixed CSS overflow and word wrap and cleaned up JS

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -45,7 +45,7 @@ header {
   margin-top: 20px;
   max-width: 800px;
   padding: 30px 40px;
-  overflow:hidden;
+  word-wrap: break-word;
   line-height: 150%;
 }
 
@@ -122,7 +122,6 @@ button[disabled] {
   border: 2px dashed #c0c7cf;
   border-radius: 6px;
   resize: none;
-  overflow: hidden;
 }
 
 @media (max-width: 690px) {
